<resources>
    <string name="app_name">rk1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="days_range_error">The value must be integer and in the range from 1 to 3650</string>
    <string name="daysCount">Days count</string>
    <string name="settings">settings</string>
    <string name="currency">Currency</string>
    <string name="language">Language</string>
    <string name="usd">USD</string>
    <string name="ru">RU</string>
    <string name="pref_currency">currency</string>
    <string name="pref_days_count">daysCount</string>
    <string name="pref_language">language</string>
    <string name="view_more_link">view more in cryptocompare.com</string>
    <string name="search">Search</string>
    <string name="invalid_code_error">Invalid cryptocurrency code</string>
    <string name="runtime_api_error">Error while parsing request</string>
    <string name="date">Date</string>
    <string name="avg">Average value</string>
    <string name="min_val">Minimum value</string>
    <string name="max_val">Maximum value</string>
    <string name="open">Open value</string>
    <string name="close">Close value</string>
    <string name="volume_from">Volume from</string>
    <string name="volume_to">Volume to</string>
</resources>
