<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="1"
        app:key="daysCount"
        app:title="@string/daysCount"/>

    <ListPreference
        android:defaultValue="@string/usd"
        android:entries="@array/currency"
        android:entryValues="@array/currency"
        android:key="@string/pref_currency"
        android:title="@string/currency"/>

    <ListPreference
        android:defaultValue="@string/ru"
        android:entries="@array/language"
        android:entryValues="@array/language"
        android:key="@string/pref_language"
        android:title="@string/language"/>

</PreferenceScreen>